# jansky-research

./: .containerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCING.md  TODO.md  VERSIONING.md  fable-ideas.md  pyproject.toml
.claude/: README.md
.claude/agents/: archive-scout.md  dataset-analyst.md  pipeline-runner.md  radio-research-assistant.md  results-interpreter.md  science-reviewer.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  paper.yml  release.yml
airflow/: .env.example  Dockerfile  compose.yaml
airflow/dags/: ecallisto_ingest.py  research_pipeline.py
containers/: compose.yaml  paper.Dockerfile
data/: lpt_sample.csv  wdpulsar_candidates.csv
docs/: faq.md  usage.md
joss/: SUBMISSION.md  paper.bib  paper.md
paper/: main.tex  refs.bib
papers/: LICENSE
papers/driftsearch/: main.tex  refs.bib
papers/ecallisto_census/: main.tex  refs.bib
papers/ecallisto_pipeline/: main.tex  refs.bib
papers/fashienv/: main.tex  refs.bib
papers/frblens/: main.tex  refs.bib
papers/frbperiod/: main.tex  refs.bib
papers/frbstats/: main.tex  refs.bib  rnaas.tex
papers/frbwait/: main.tex  refs.bib
papers/glitchpop/: main.tex  refs.bib
papers/hi/: main.tex  refs.bib
papers/junodam/: main.tex  refs.bib
papers/lpt/: main.tex  refs.bib
papers/lptv/: main.tex  refs.bib
papers/offsets/: main.tex  refs.bib
papers/peaked/: main.tex  refs.bib
papers/ppdot/: main.tex  refs.bib
papers/pte2/: main.tex  refs.bib
papers/pulsarspec/: main.tex  refs.bib
papers/rfitrend/: main.tex  refs.bib
papers/rmdipole/: main.tex  refs.bib
papers/rmsky/: main.tex  refs.bib
papers/rmstructure/: main.tex  refs.bib
papers/skr/: main.tex  refs.bib
papers/solarbursts/: main.tex  refs.bib
papers/sourcecounts/: main.tex  refs.bib
papers/southern/: main.tex  refs.bib
papers/spectra/: main.tex  refs.bib  rnaas.tex
papers/stacking/: main.tex  refs.bib
papers/stokesv/: main.tex  refs.bib
papers/stokesv_discovery/: main.tex  refs.bib
papers/svsbi/: main.tex  refs.bib
papers/swaves/: main.tex  refs.bib
papers/torchdsp/: main.tex  refs.bib
papers/torchfdmt/: main.tex  refs.bib
papers/triangulate/: main.tex  refs.bib
papers/type3synthesis/: main.tex  refs.bib
papers/typeii/: main.tex  refs.bib
papers/vgpra/: main.tex  refs.bib  rnaas.tex
papers/vlass/: main.tex  refs.bib
papers/vlbi/: main.tex  refs.bib
papers/wdpulsar/: main.tex  refs.bib
papers/windwaves/: main.tex  refs.bib
plans/: 00-scaffold.md  01-survey.md  02-gap-analysis.md  03-tooling.md  04-agents.md  05-airflow-podman.md  06-data-analysis.md  07-paper.md  08-reproducibility-release.md  09-uss-spectral-index.md  10-frb-periodicity.md  11-seti-drift-recovery.md  12-hi-rotation-curve.md  13-vlass-variability.md  14-peaked-spectrum.md  15-racs-stokes-v.md  16-southern-curvature.md  17-radio-optical-offsets.md  18-pulsar-spectra.md  19-vlass-stacking.md  20-astrogeo-vlbi-variability.md  21-solar-type-iii.md  22-galactic-rm-sky.md  23-pulsar-ppdot.md  24-interplanetary-typeiii.md  25-stereo-interplanetary-typeiii.md  26-stereo-triangulation.md  27-source-counts.md  28-breakthrough-listen-singlepulse.md  29-lotss-deep-144mhz-counts.md  30-type-iii-synthesis.md  31-airflow-ecallisto-streaming.md  32-snakemake-static-slices.md  33-racs-stokesv-discovery.md  34-torch-fdmt-singlepulse.md  35-lpt-population.md  36-spice-racs-rm-structure.md  37-juno-dam-census.md  38-rm-dipole.md  39-chime-cat2-repeater-census.md  (+46 more)
results/: catalog.npz
scripts/: glitchpop_real.py  lptv_real.py  next_version.py  ovro_lwa_browser_download.js  pte2_real.py  rfitrend_real.py  skr_real.py  stokesv_discovery_real.py  typeii_real.py  vgpra_real.py  wdpulsar_real.py
src/jansky_research/: __init__.py  data.py  driftsearch.py  ecallisto_catalog.py  ecallisto_census.py  fashienv.py  fdmt.py  frblens.py  frbperiod.py  frbstats.py  frbwait.py  glitchpop.py  glitchpop_real.py  hi.py  junodam.py  lpt.py  lptv.py  offsets.py  peaked.py  pipeline.py  ppdot.py  pte2.py  pte2_real.py  pulsarspec.py  report.py  rfitrend.py  rmdipole.py  rmsky.py  rmstructure.py  singlepulse.py  skr.py  solarbursts.py  sourcecounts.py  southern.py  spectra.py  stacking.py  stokesv.py  stokesv_discovery.py  svsbi.py  (+10 more)
station/: README.md  hydrogen-line-receiver.md  interferometry.md  meteor-scatter-station.md  operations.md  test-equipment.md
survey/: candidate-gaps.md  data-source-scan.md  drift-findings.md  ecallisto-census-findings.md  ecallisto-findings.md  fashienv-findings.md  findings.md  frblens-findings.md  frbwait-findings.md  gap-analysis.md  github-landscape.md  glitchpop-findings.md  hi-findings.md  idea-pwn-xray-radio-polarimetry.md  junodam-findings.md  literature.md  lpt-findings.md  lptv-findings.md  new-findings-scan.md  offsets-findings.md  opportunity-scan-2026-07.md  peaked-findings.md  period-findings.md  period_results.csv  ppdot-findings.md  pte2-findings.md  pulsarspec-findings.md  rfitrend-findings.md  rmdipole-findings.md  rmsky-findings.md  rmstructure-findings.md  sensitivity-null-audit.md  skr-findings.md  solarbursts-findings.md  sourcecounts-findings.md  southern-findings.md  stacking-findings.md  stokesv-discovery-findings.md  stokesv-findings.md  svsbi-findings.md  (+13 more)
tests/: test_data.py  test_driftsearch.py  test_ecallisto_catalog.py  test_ecallisto_census.py  test_fashienv.py  test_fdmt.py  test_frblens.py  test_frbperiod.py  test_frbstats.py  test_frbwait.py  test_glitchpop.py  test_hi.py  test_junodam.py  test_lpt.py  test_lptv.py  test_next_version.py  test_offsets.py  test_peaked.py  test_pipeline.py  test_ppdot.py  test_pte2.py  test_pulsarspec.py  test_rfitrend.py  test_rmdipole.py  test_rmsky.py  test_rmstructure.py  test_singlepulse.py  test_skr.py  test_smoke.py  test_solarbursts.py  test_sourcecounts.py  test_southern.py  test_spectra.py  test_stacking.py  test_stokesv.py  test_stokesv_discovery.py  test_svsbi.py  test_swaves.py  test_torchdsp.py  test_triangulate.py  (+7 more)
workflow/: Snakefile
(+16 files in other folders)
