[project]
name = "jansky-research"
version = "1.0.0"
description = "Amateur radio-astronomy research, end to end: tested tools run on real public data — FRBs, HI, VLASS variability, peaked-spectrum searches — each gated by adversarial science review and written up honestly, nulls included. Sibling of the jansky teaching course."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Joe Barbere" }]
keywords = ["radio-astronomy", "astronomy", "research", "reproducibility", "pipeline"]

# Core deps are deliberately lean. The project depends on the `jansky` package
# for its tested helpers (transients, rfi, timing, seti, sourcecounts, formats,
# data ...). Heavy/fragile pieces (Airflow, LaTeX) live in extras / containers.
dependencies = [
    "jansky",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Apache Airflow is kept OUT of the core install — its constraint resolution is
# heavy and conflict-prone. It is installed only inside the Airflow container
# (airflow/Dockerfile) or via `uv sync --extra airflow` when iterating on DAGs.
airflow = ["apache-airflow>=2.9,<3.0"]
# Reading the bitshuffle-compressed Breakthrough Listen Voyager HDF5 (validate_voyager).
voyager = ["h5py>=3.0", "hdf5plugin>=4.0"]
# Querying the VLASS catalogues for the multi-epoch variability slice (Epoch 1 via VizieR TAP).
vlass = ["pyvo>=1.4"]
# Reading Wind/WAVES Level-2 CDF radio spectra for the interplanetary type III slice.
windwaves = ["cdflib>=1.0"]
# Right-sized orchestration: a server-less file-DAG runner for the STATIC slices (Airflow is reserved
# for the streaming e-Callisto ingest). Kept OUT of core/CI like airflow — needs Python >=3.11, so it
# is installed only via `uv sync --extra workflow` (or `uv run --extra workflow snakemake ...`).
workflow = ["snakemake>=8.0; python_version >= '3.11'"]
# The pure-PyTorch Fast DM Transform (plan 34). Pinned to the CPU wheel index below so CI/tests
# never pull multi-GB accelerator wheels; the GPU benchmark leg runs from a ROCm venv with this
# repo importable (see plans/34). Tests `importorskip("torch")`, so core CI stays torch-free.
fdmt = ["torch>=2.4"]
# Neural simulation-based inference for the RACS Stokes-V coherent-emitter population (plan 40).
# Pulls torch; kept OUT of core/CI like fdmt. Tests `importorskip("sbi")`, so the pure-NumPy
# forward model / summary statistics stay testable in core CI; NPE training runs from the ROCm
# venv (verified: sbi 0.26.1 trains NPE on gfx1102 with no code changes).
sbi = ["sbi>=0.26,<0.27"]
# Streaming the OVRO-LWA type II real leg (plan 50): astropy `use_fsspec` lazy cloud-FITS reads
# over HTTPS need fsspec + aiohttp, so each ~1.7 GB daily dynamic spectrum is range-read (Stokes-I
# plane only, chunked + time-downsampled) straight into memory -- no file ever touches disk. Kept
# OUT of core CI; the pure downsample/sweep logic is tested without it.
typeii = ["fsspec>=2024.2", "aiohttp>=3.9"]

# The chosen-domain extra is added once GATE 1 picks the science focus, e.g.
# analysis = ["jansky[pulsar]"]  or  ["jansky[hi]"]  etc.

[project.urls]
Homepage = "https://github.com/joebarbere/jansky-research"

# --- jansky dependency source ----------------------------------------------------
# LOCAL DEV (default): use the sibling checkout so edits across both repos are live.
# RELEASE / CI on a clean checkout: switch to the pinned git tag instead, e.g.
#   jansky = { git = "https://github.com/joebarbere/jansky", tag = "v0.1.0" }
# (the tag is cut on jansky; uv.lock records the exact resolved commit).
[tool.uv.sources]
jansky = { path = "../jansky", editable = true }
# torch resolves from the CPU wheel index (small, CI-safe); GPU runs use a separate ROCm venv.
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jansky_research"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "nbmake>=1.5",
    "jupyterlab>=4.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "data", "paper"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["jansky_research"]

[tool.coverage.report]
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
files = ["src/jansky_research"]
# 3.12 matches the repo's pinned runtime; the scientific stack's bundled stubs
# (numpy 2.x) use PEP 695 `type` statements that mypy rejects under older targets.
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
